# loaner

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
api/utils/: tokens.py
api/v1/: urls.py
api/v1/auth/: serializers.py  urls.py  views.py
api/v1/funds/: serializers.py  urls.py  views.py
api/v1/loans/: serializers.py  urls.py  views.py
api/v1/users/: serializers.py  urls.py  views.py
core/: logging.py  urls.py
core/settings/: base.py  dev.py  prod.py
funds/: admin.py  apps.py  models.py  receivers.py
funds/migrations/: 0001_initial.py  0002_alter_fund_budget_alter_fundtransaction_amount.py
loans/: admin.py  apps.py  models.py  receivers.py
loans/migrations/: 0001_initial.py  0002_alter_loan_start_date.py  0002_paymenttransaction.py  0003_remove_loan_interest_rate_loan_no_payment_and_more.py  0004_remove_loan_no_payment.py  0005_remove_loan_yearly_interest_rate_and_more.py  0006_alter_loan_payment_amount.py  0007_loan_start_date.py  0008_alter_loan_start_date.py  0009_amortization.py  0010_loan_status.py
tests/: test_models.py
users/: admin.py  apps.py  models.py  permissions.py  receivers.py
users/migrations/: 0001_initial.py  0002_user_user_type.py
